# mynlFEM

./: Dockerfile  README.md  README.rst  requirements.txt
cython/: nlfem.cpp  nlfem.pyx
include/: Cassemble.h  Cassemble.pxd  MeshTypes.h
logs/: cythonize.md  parallel_efficiency.md
python/: helpers.py
src/: Cassemble.cpp  integration.cpp  integration.h  mathhelpers.cpp  mathhelpers.h  model.cpp  model.h
tests/: CMakeLists.txt  assembleTest.cpp  mergeConflict
